[package]
name = "radiance-outpost"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full", "net", "io-util", "sync", "time", "signal"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
quiche = "0.24.6"
rkyv = "0.8.13"
dashmap = "6.1.0"
rand = "0.9.2"
nix = { version = "0.30.1", features = ["socket", "net"] }

